--- a/denovolyzerManuscript.Rmd
+++ b/denovolyzerManuscript.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 
 Alternative title ideas:  
-A statistical aproach to assess the frequency of *de novo* variation  
+A statistical approach to assess the frequency of *de novo* variation  
 Interpreting *de novo* variation in human disease: a model-based approach  
 
 Contact information  
@@ -24,15 +24,15 @@ opts_chunk$set(cache=T)
 ```
 
 ##ABSTRACT
-Spontaneously arising (*de novo*) genetic variants are important in human disease, yet every individual carries many such variants, with a median of 1 *de novo* variant affecting the protein-coding portion of the genome.  A recently-described mutational model{25086666} provides a powerful framework for the robust statistical evaluation of such variants, enabling the interpretation of *de novo* variation in human disease.  Here we describe a new open-source software package, **denovolyzeR**, that implements this model and provides tools for the analysis of *de novo* sequence variants.
+Spontaneously arising (*de novo*) genetic variants are important in human disease, yet every individual carries many such variants, with a median of 1 *de novo* variant affecting the protein-coding portion of the genome.  A recently-described mutational model {25086666} provides a powerful framework for the robust statistical evaluation of such variants, enabling the interpretation of *de novo* variation in human disease.  Here we describe a new open-source software package, **denovolyzeR**, that implements this model and provides tools for the analysis of *de novo* sequence variants.
 
 ###Keywords: *de novo* variant, exome sequencing
 
 ##INTRODUCTION
 
-Spontaneously arising (*de novo*) genetic variants are important in human disease. Every individual carries approximately 100 such variants that have arisen via mutational events in the parental germline or early embryo, with a median of 1 *de novo* variant affecting the protein-coding portion of genome, referred to as the exome{21666693; 20080596}.
+Spontaneously arising (*de novo*) genetic variants are important in human disease. Every individual carries approximately 100 such variants that have arisen via mutational events in the parental germline or early embryo, with a median of 1 *de novo* variant affecting the protein-coding portion of genome, referred to as the exome {21666693; 20080596}.
 
-Exome sequencing and analysis of *de novo* variants has successfully identified genes underlying rare and genetically homogeneous Mendelian diseases. In Kabuki syndrome, nonsynonymous *de novo* variants were identified in KMT2D (MLL2) in 9 out of 10 unrelated individuals{20711175}. An accumulation of this magnitude would be extremely improbable in the absence of a causal role in the disease given both the rarity and independence of *de novo* variants.
+Exome sequencing and analysis of *de novo* variants has successfully identified genes underlying rare and genetically homogeneous Mendelian diseases. In Kabuki syndrome, non-synonymous *de novo* variants were identified in KMT2D (MLL2) in 9 out of 10 unrelated individuals {20711175}. An accumulation of this magnitude would be extremely improbable in the absence of a causal role in the disease given both the rarity and independence of *de novo* variants.
 
 By contrast, it is more challenging to dissect the role of *de novo* variants in conditions with high levels of locus heterogeneity, including heritable complex traits and some Mendelian conditions, where *de novo* variants are spread across multiple genes, and may play a smaller role in pathogenesis. Here it may be possible to assess the global contribution of *de novo* coding variants to disease by comparing their frequency in cases and controls, given sufficiently large sample sizes. However, at the level of individual genes, the interpretation of *de novo* variants is complicated by the background mutation rate, which varies greatly between genes. Additionally, as more individuals are sequenced, it is inevitable that multiple *de novo* variants will be observed in some genes by chance.
 
@@ -47,7 +47,11 @@ This protocol will assess whether there is a genome-wide excess of *de novo* var
 
 ###Materials
 A computer running the `R` software environment, available for UNIX platforms, Windows and MacOS from http://www.r-project.org.  
-The **denovolyzeR** package - download and installation options are described at http://denovolyzer.org  
+The **denovolyzeR** package. The latest stable release can be installed directly from the Comprehensive R Archive Network (CRAN) from within `R`
+```{r}
+install.packages("denovolyzeR")
+```
+Other download and installation options, including for the latest development version, are described at http://denovolyzer.org
 `dplyr` and `reshape` packages.  These dependencies may be installed automatically when **denovolyzeR** is installed (depending on your installation route). Otherwise they can be installed by running:
 ```{r, eval=FALSE}
 install.packages("dplyr","reshape")
@@ -77,7 +81,7 @@ Whatever input format is chosen, summary statistics can be produced for "lof", "
 geneIdentifiers <- names(dplyr::select(denovolyzeR:::pDNM,-class,-value))
 ```
 
-A number of gene identifiers may be used.  Valid identifiers recognised by the software include:`r geneIdentifiers`.  **denovolyzeR** interprets gene identifiers as gene symbols by default, more specifically, these correspond to the "external\_gene\_name" provided by the Ensembl genome browser{25352552}.
+A number of gene identifiers may be used.  Valid identifiers recognised by the software include: `r geneIdentifiers`.  **denovolyzeR** interprets gene identifiers as gene symbols by default, more specifically, these correspond to the "external\_gene\_name" provided by the Ensembl genome browser{25352552}.
 
 3) Compare the observed burden of *de novo* variation to expectation.
 
@@ -119,7 +123,7 @@ help(denovolyzeByClass)
 
 #BASIC PROTOCOL 2
 ##Assessing the number of genes with multiple *de novo* variants
-The occurence of multiple *de novo* events in a single gene, in a cohort of individuals with a common phenotype, may implicate that gene in the pathogenesis of the condition under study.  Before evaluating single genes, it is instructive to assess the total number of genes harboring multiple *de novo* variants.  Here, the number of genes containing multiple *de novo* variants is compared with an empirical distribution derived by permutation.
+The occurrence of multiple *de novo* events in a single gene, in a cohort of individuals with a common phenotype, may implicate that gene in the pathogenesis of the condition under study.  Before evaluating single genes, it is instructive to assess the total number of genes harboring multiple *de novo* variants.  Here, the number of genes containing multiple *de novo* variants is compared with an empirical distribution derived by permutation.
 
 ###Materials
 As for protocol 1
@@ -131,7 +135,7 @@ library(denovolyzeR)
 ```
 
 2) The `denovolyzeMultiHits` function will perform the required analysis. 
-The same three arguments are required as for BASIC PROTOCOL 1: `genes` (vector of genes containing *de novo* variants), `classes` (a vector of variant consequences) and `nsamples` (number of samples).  In addition, `nperms` determinines the number of permutations run (defaults to 100).
+The same three arguments are required as for BASIC PROTOCOL 1: `genes` (vector of genes containing *de novo* variants), `classes` (a vector of variant consequences) and `nsamples` (number of samples).  In addition, `nperms` determines the number of permutations run (defaults to 100).
 
 The function asks the question "given `nVars` variants in a set of genes, how many genes are expected to contain more than one variant?".
 ```{r}
@@ -256,7 +260,7 @@ denovolyzeByClass(genes=autismDeNovos$gene,
                   nsamples=1078,
                   includeGenes=fmrpGenes$geneName)
 ```
-In this example we see a highly significant enrichment of *de novo* lof variants in genes that interact with FMRP in our cohort of autism cases. Care should be taken to ensure that the same gene identifiers are used throughout the analysis. For example, if the list of genes containing *de novos* includes KMT2D (previously known as MLL2) but the geneset uses the old symbol MLL2, these will not be matched.  The function will give a warnings if gene identifiers are used that are not found in the internal mutation probability tables.  
+In this example we see a highly significant enrichment of *de novo* lof variants in genes that interact with FMRP in our cohort of autism cases. Care should be taken to ensure that the same gene identifiers are used throughout the analysis. For example, if the list of genes containing *de novos* includes KMT2D (previously known as MLL2) but the geneset uses the old symbol MLL2, these will not be matched.  The function will give a warning if gene identifiers are used that are not found in the internal mutation probability tables.  
 
 For many genes, the Ensembl gene name and HGNC symbol will be identical, but in some instances they differ (e.g. where there is no HGNC identifier, and Ensembl uses a symbol from another source). Note that we receive a warning if we pass a list of genes described using Ensembl gene symbols (the demonstration data), but tell the software to match to HGNC symbols.
 ```{r}
@@ -341,7 +345,7 @@ sum(autismDeNovos$gene %in% probabilityTable$enstID)
 #SUPPORT PROTOCOL 3
 ##Using an alternative mutational probability table
 **denovolyzeR** relies on a pre-computed tabulation of the probability of *de novo* variation arising in each gene, as described in the Introduction and Background Information.  The default probability table was generated by calculating the probability of *de novo* events for every base of the canonical Gencode transcripts, as defined in Gencode v19.  It is beyond the scope of this protocol to describe methods to compute these tables, but **denovolyzeR** does allow for the import of alternative tables, if required.
-For example, the original paper describing this analytical framework{25086666} calculated mutational probabilities based on  RefSeq transcript definitions, whereas **denovolyzeR** now uses Gencode definitions.  Tables may also be computed to include other functional consequences (e.g. damaging missense variants, as determined by *in silico* SNV consequence prediction algorithms).
+For example, the original paper describing this analytical framework {25086666} calculated mutational probabilities based on  RefSeq transcript definitions, whereas **denovolyzeR** now uses Gencode definitions.  Tables may also be computed to include other functional consequences (e.g. damaging missense variants, as determined by *in silico* SNV consequence prediction algorithms).
 
 ###Materials
 An alternative probability table. Examples are available to download from http://denovolyzer.org/
@@ -367,7 +371,7 @@ denovolyzeByClass(genes=autismDeNovos$gene,
                   probTable=probTable_Samocha2014,
                   geneId="geneID")
 ```
-In this instance there is a warning that not all of the input identifiers are recognised: this is because there is not a one:one mapping between the identifiers associated with RefSeq and Gencode transcripts.
+In this instance there is a warning that not all of the input identifiers are recognised. This is because there is not a one-to-one mapping between the identifiers associated with RefSeq and Gencode transcripts.
 
 _____
 
@@ -380,7 +384,7 @@ Previous work established that the mutability of a base can be sufficiently mode
 
 We then consider each base in the coding sequence and use the mutation rate table to determine its probability of mutating to the other bases. We predict the impact of the mutation on the protein product and aggregate the probabilities by mutation type across each gene. These per-gene probabilities are then adjusted for how well sequenced the gene was and regional divergence between humans and macaques.
 
-Given that the number of *de novo* variants per trio follows a Poisson distribution{22495311}, we use the Poisson distribution to evaluate the excesses of *de novo* events. As an example, to determine if a particular gene has more *de novo* loss-of-function variants than expected, we multiply that gene’s probability of a loss-of-function mutation by the number of trios and by 2 (for the number of chromosomes) in the study. The resulting number is used as the expectation (denoted as lambda, $\lambda$) to which the observed number of *de novo* loss-of-function variants is compared. Specifically, the `ppois` command in `R` is used. The three *de novo* loss-of-function variants seen in DYRK1A are used in the example below. With `denovolyze`, we get the following result:
+Given that the number of *de novo* variants per trio follows a Poisson distribution {22495311}, we use the Poisson distribution to evaluate the excesses of *de novo* events. As an example, to determine if a particular gene has more *de novo* loss-of-function variants than expected, we multiply that gene’s probability of a loss-of-function mutation by the number of trios and by 2 (for the number of chromosomes) in the study. The resulting number is used as the expectation (denoted as lambda, $\lambda$) to which the observed number of *de novo* loss-of-function variants is compared. Specifically, the `ppois` command in `R` is used. The three *de novo* loss-of-function variants seen in DYRK1A are used in the example below. With `denovolyze`, we get the following result:
 ```{r}
 denovolyzeByGene(genes=autismDeNovos$gene,
                  classes=autismDeNovos$class,
