--- a/denovolyzerManuscript.Rmd
+++ b/denovolyzerManuscript.Rmd
@@ -24,7 +24,7 @@ opts_chunk$set(cache=T)
 ```
 
 ##ABSTRACT
-Spontaneously arising (*de novo*) genetic variants are important in human disease, yet every individual carries many such variants, with a median of 1 *de novo* variant affecting the protein-coding portion of the genome.  A recently described mutational model {25086666} provides a powerful framework for the robust statistical evaluation of such codin variants, enabling the interpretation of *de novo* variation in human disease.  Here we describe a new open-source software package, **denovolyzeR**, that implements this model and provides tools for the analysis of *de novo* coding sequence variants.
+Spontaneously arising (*de novo*) genetic variants are important in human disease, yet every individual carries many such variants, with a median of 1 *de novo* variant affecting the protein-coding portion of the genome.  A recently described mutational model {25086666} provides a powerful framework for the robust statistical evaluation of such coding variants, enabling the interpretation of *de novo* variation in human disease.  Here we describe a new open-source software package, **denovolyzeR**, that implements this model and provides tools for the analysis of *de novo* coding sequence variants.
 
 ###Keywords: *de novo* variant, exome sequencing
 
@@ -32,11 +32,11 @@ Spontaneously arising (*de novo*) genetic variants are important in human diseas
 
 Spontaneously arising (*de novo*) genetic variants are important in human disease. Every individual carries approximately 100 such variants that have arisen via mutational events in the parental germline or early embryo, with a median of 1 *de novo* variant affecting the protein-coding portion of genome, referred to as the exome {21666693; 20080596}.
 
-Exome sequencing and analysis of *de novo* variants has successfully identified genes underlying rare and genetically homogeneous Mendelian diseases. In Kabuki syndrome, non-synonymous *de novo* variants were identified in KMT2D (MLL2) in 9 out of 10 unrelated individuals {20711175}. An accumulation of this magnitude would be extremely improbable in the absence of a causal role in the disease given both the rarity and independence of *de novo* variants.
+Exome sequencing and analysis of *de novo* variants has successfully identified genes underlying rare and genetically homogeneous Mendelian diseases. In Kabuki syndrome, for example, non-synonymous *de novo* variants were identified in KMT2D (MLL2) in 9 out of 10 unrelated individuals {20711175}. An accumulation of this magnitude would be extremely improbable in the absence of a causal role in the disease given both the rarity and independence of *de novo* variants.
 
 By contrast, it is more challenging to dissect the role of *de novo* variants in conditions with high levels of locus heterogeneity, including heritable complex traits and some Mendelian conditions, where *de novo* variants are spread across multiple genes, and may play a smaller role in pathogenesis. Here it may be possible to assess the global contribution of *de novo* coding variants to disease by comparing their frequency in cases and controls, given sufficiently large sample sizes. However, at the level of individual genes, the interpretation of *de novo* variants is complicated by the background mutation rate, which varies greatly between genes. Additionally, as more individuals are sequenced, it is inevitable that multiple *de novo* variants will be observed in some genes by chance.
 
-A statistical framework has recently been developed to address these challenges{25086666}, which assesses *de novo* single nucleotide variants (SNVs) in coding sequence. Briefly, the mutability of each gene is individually determined based on local sequence context, and the probability that a *de novo* event will arise in a single copy of the gene in one generation is calculated. The consequence of each possible *de novo* SNV is computed, and *de novo* probabilities are tabulated for each variant class. In order to more fully assess loss-of-function (lof) variation, the probability of a frameshifting insertion or deletion was estimated for all genes. For a given study population, *de novo* variants can be evaluated by comparing the observed numbers of variants with the number expected based on this model and the population size, using a Poisson framework. This permits the robust evaluation of *de novo* variation in individual genes, and increases the power of genome-wide analyses.
+A statistical framework has recently been developed to address these challenges {25086666}, which assesses *de novo* single nucleotide variants (SNVs) in coding sequence. Briefly, the mutability of each gene is individually determined based on local sequence context, and the probability that a *de novo* event will arise in a single copy of the gene in one generation is calculated. The consequence of each possible *de novo* SNV is computed, and *de novo* probabilities are tabulated for each variant class. In order to more fully assess loss-of-function (lof) variation, the probability of a frameshifting insertion or deletion is also estimated for all genes. For a given study population, *de novo* variants can be evaluated by comparing the observed numbers of variants with the number expected based on this model and the population size, using a Poisson framework. This permits the robust evaluation of *de novo* variation in individual genes, and increases the power of genome-wide analyses.
 
 In this unit, we describe the application of this statistical framework to analyze *de novo* variants using **denovolyzeR** {http://denovolyzer.org}, an open-source software package written for the `R` statistical software environment{R: A Language and Environment for Statistical Computing}. We present protocols for four analyses: to assess (i) whether there is a genome-wide excess of *de novo* variation for different functional classes of variant, (ii) whether there is a genome-wide excess of genes with multiple *de novo* variants, (iii) whether individual genes carry an excess of *de novo* variants, and (iv) whether a pre-specified set of genes collectively shows an enrichment of *de novo* variants. 
 
@@ -46,19 +46,22 @@ In this unit, we describe the application of this statistical framework to analy
 This protocol will assess whether there is a genome-wide excess of *de novo* variation for different functional classes of variant.
 
 ###Materials
-A computer running the `R` software environment, available for UNIX platforms, Windows and MacOS from http://www.r-project.org.  
-The **denovolyzeR** package. The latest stable release can be installed directly from the Comprehensive R Archive Network (CRAN) from within `R`
-```{r}
+
+- A computer running the `R` software environment, available for UNIX platforms, Windows and MacOS from http://www.r-project.org.  
+- The **denovolyzeR** package. The latest stable release can be installed directly from the Comprehensive R Archive Network (CRAN) from within `R`
+
+```
 install.packages("denovolyzeR")
 ```
-Other download and installation options, including for the latest development version, are described at http://denovolyzer.org
-`dplyr` and `reshape` packages.  These dependencies may be installed automatically when **denovolyzeR** is installed (depending on your installation route). Otherwise they can be installed by running:
-```{r, eval=FALSE}
+- Other download and installation options, including for the latest development version, are described at http://denovolyzer.org  
+- `dplyr` and `reshape` packages.  These dependencies may be installed automatically when **denovolyzeR** is installed (depending on your installation route). Otherwise they can be installed by running:
+
+```
 install.packages("dplyr","reshape")
 ```
 
-A table of *de novo* variants.  The minimum input comprises two columns of data: gene names, and variant classes (functional consequence of each variant).  
-Example data is included in the **denovolyzeR** package, and will be used in this protocol. The dataset comprises a `data.frame` of *de novo* variants identified in 1078 individuals with autism{25086666}, named `autismDeNovos`.  
+- A table of *de novo* variants.  The minimum input comprises two columns of data: gene names, and variant classes (functional consequence of each variant).  
+Example data is included in the **denovolyzeR** package, and will be used in this protocol. The dataset comprises a `data.frame` of *de novo* variants identified in 1078 individuals with autism {25086666}, named `autismDeNovos`.  
 It is assumed that readers are able to import their own data into the `R` environment, using the `read.table` function or equivalent (in R, `?read.table` will provide help).  
 
 1) In R, load the **denovolyzeR** package.
@@ -81,7 +84,7 @@ Whatever input format is chosen, summary statistics can be produced for "lof", "
 geneIdentifiers <- names(dplyr::select(denovolyzeR:::pDNM,-class,-value))
 ```
 
-A number of gene identifiers may be used.  Valid identifiers recognised by the software include: `r geneIdentifiers`.  **denovolyzeR** interprets gene identifiers as gene symbols by default, more specifically, these correspond to the "external\_gene\_name" provided by the Ensembl genome browser{25352552}.
+A number of gene identifiers may be used.  Valid identifiers recognised by the software include: `r geneIdentifiers`.  **denovolyzeR** interprets gene identifiers as gene symbols by default, more specifically, these correspond to the "external\_gene\_name" provided by the Ensembl genome browser {25352552}.
 
 3) Compare the observed burden of *de novo* variation to expectation.
 
@@ -177,7 +180,7 @@ denovolyzeMultiHits(genes=autismDeNovos$gene,
 
 #BASIC PROTOCOL 3
 ##Assessing the frequency of *de novo* variants in individual genes
-In the previous protocol, we assessed whether there were more genes containing multiple *de novo* variants than expected by chance.  In the example data, we noted 6 genes with multiple loss-of-function hits. In this next protocol, we will determine whether any individual genes carry an excess of *de novo* variants, using the `denovolyzeByGene` function.
+In the previous protocol, we assessed whether there were more genes containing multiple *de novo* variants than expected by chance.  In the example data, we noted five genes with multiple loss-of-function hits. In this next protocol, we will determine whether any individual genes carry an excess of *de novo* variants, using the `denovolyzeByGene` function.
 
 ###Materials
 As for protocol 1
@@ -198,7 +201,7 @@ head(
   )
 ```
 
-**denovolyzeR** will output one line for every gene analysed (the whole exome, by default).  Rather than using head, users might note that the `dplyr` package, which is required in order to install **denovolyzeR**, provides a convenient `filter` function that allows us to only display samples with multiple protein-altering variants, for example
+**denovolyzeR** will output one line for every gene that contains at least one variant in  the input data.  Rather than using `head`, users might note that the `dplyr` package, which is required in order to install **denovolyzeR**, provides a convenient `filter` function that allows us to only display samples with multiple protein-altering variants, for example
 ```{r, include=FALSE}
 library(dplyr)
 ```
@@ -380,7 +383,7 @@ _____
 ####Background Information  
 The mutational model is described in full detail in {25086666}. Briefly, it is based on a determination of the probability of each base in the coding sequence of the human genome mutating to each of the other possible bases. The predicted impact of these changes is aggregated across the gene to establish the probability of specific types of mutation (synonymous, missense, etc).
 
-Previous work established that the mutability of a base is sufficiently modeled by accounting for the local sequence context of one nucleotide on either side of the base of interest{9683596}{17357078}. We uses this trinucleotide context for intergenic single nucleotide polymorphisms (SNPs) from the 1000 Genomes project to create a mutation rate table, which provides the relative probabilities of each possible trinucleotide (XY^1^Z) to trinucleotide (XY^2^Z) change.
+Previous work established that the mutability of a base is sufficiently modeled by accounting for the local sequence context of one nucleotide on either side of the base of interest {9683596;17357078}. We uses this trinucleotide context for intergenic single nucleotide polymorphisms (SNPs) from the 1000 Genomes project to create a mutation rate table, which provides the relative probabilities of each possible trinucleotide (XY^1^Z) to trinucleotide (XY^2^Z) change.
 
 We then consider each base in the coding sequence and use the mutation rate table to determine its probability of mutating to the other bases. We predict the impact of the mutation on the protein product and aggregate the probabilities by mutation type across each gene. These per-gene probabilities are then adjusted for how well sequenced the gene was and regional divergence between humans and macaques.
 
@@ -415,7 +418,7 @@ Leave blank
 Leave blank
 
 ####Time Considerations  
-These analyses are not especially computationally intensive, and will run on a desktop of laptop computer in seconds.  The `denovolyzeMultiHits` function uses permutation, and computation time increases linearly with the number of permutations.  Elapsed times (in seconds) to run the three principal functions on *de novo* variants from 1078 samples, using default settings, on a MacBook Air (1.7GHz i7, 8Gb RAM) are as follows:
+These analyses are not especially computationally intensive, and will run on a desktop or laptop computer in seconds.  The `denovolyzeMultiHits` function uses permutation, and computation time increases linearly with the number of permutations.  Elapsed times (in seconds) to run the three principal functions on *de novo* variants from 1078 samples, using default settings, on a MacBook Air (1.7GHz i7, 8Gb RAM) are as follows:
 ```{r, collapse=FALSE}
 system.time(denovolyzeByClass(genes=autismDeNovos$gene,classes=autismDeNovos$class,nsamples=1078))["elapsed"]
 system.time(denovolyzeMultiHits(genes=autismDeNovos$gene,classes=autismDeNovos$class,nsamples=1078,nperms=1000))["elapsed"]
@@ -443,15 +446,3 @@ na
 
 ##TABLES
 na
-
-
-_____
-
-Additional instructions:
-The following should be submitted as individual files, NOT as part of the main document:
-•	Figures
-•	COPYRIGHT PERMISSION (if required)
-•	VIDEOS (optional)
-
-If you have any questions about your manuscript, or formatting, or submitting it, consult the Contributor’s Style Guide (For Authors page) or contact the Developmental Editor listed for your title.
-For questions about our submissions site (ScholarOne Manuscripts), your Contributor Agreement, or copyright permissions, please contact our Editorial Program Coordinator at cpsubmissions@wiley.com. 
